compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case_clause_mismatch.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 266
expression: "case 1 { a -> 1 b -> 2.0 }"
---
----- SOURCE CODE
case 1 { a -> 1 b -> 2.0 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:17
  │
1 │ case 1 { a -> 1 b -> 2.0 }
  │                 ^^^^^^^^

This case clause was found to return a different type than the previous
one, but all case clauses must return the same type.

Expected type:

    Int

Found type:

    Float
